--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
     "prettier/prettier": [
       "error",
       {
-        "singleQuote": true,
+        "singleQuote": false,
         "endOfLine": "auto"
       }
     ]
@@ -37,7 +37,7 @@
         "prettier/prettier": [
           "error",
           {
-            "singleQuote": true,
+            "singleQuote": false,
             "endOfLine": "auto"
           }
         ],
@@ -49,8 +49,8 @@
         "@typescript-eslint/comma-dangle": "off", // Avoid conflict rule between Eslint and Prettier
         "@typescript-eslint/consistent-type-imports": "error", // Ensure `import type` is used when it's necessary
         "import/prefer-default-export": "off", // Named export is easier to refactor automatically
-        "simple-import-sort/imports": "error", // Import configuration for `eslint-plugin-simple-import-sort`
-        "simple-import-sort/exports": "error", // Export configuration for `eslint-plugin-simple-import-sort`
+        "simple-import-sort/imports": "warn", // Import configuration for `eslint-plugin-simple-import-sort`
+        "simple-import-sort/exports": "warn", // Export configuration for `eslint-plugin-simple-import-sort`
         "@typescript-eslint/no-unused-vars": "off",
         "unused-imports/no-unused-imports": "error",
         "unused-imports/no-unused-vars": [
