--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "dependencies": {
     "@vercel/analytics": "^0.1.8",
+    "date-fns": "^2.29.3",
     "husky": "^8.0.3",
+    "moment": "^2.29.4",
+    "momentjs": "^2.0.0",
     "next": "^13.1.2",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.45",
