--- a/package.json
+++ b/package.json
@@ -22,16 +22,38 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@mdx-js/loader": "^2.2.1",
+    "@mdx-js/react": "^2.2.1",
+    "@next/mdx": "^13.1.6",
+    "@remark-embedder/core": "^3.0.1",
+    "@remark-embedder/transformer-oembed": "^3.0.0",
+    "@types/mapbox__rehype-prism": "^0.8.0",
     "@vercel/analytics": "^0.1.8",
     "date-fns": "^2.29.3",
+    "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
+    "katex": "^0.16.4",
+    "mdx-embed": "^1.1.2",
     "moment": "^2.29.4",
     "momentjs": "^2.0.0",
     "next": "^13.1.2",
+    "next-mdx-remote": "^4.3.0",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.45",
+    "parse5": "^7.1.2",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-katex": "^3.0.1",
+    "rehype-katex": "^6.0.2",
+    "rehype-react": "^7.1.2",
+    "rehype-stringify": "^9.0.3",
+    "remark-math": "^5.1.1",
+    "remark-parse": "^10.0.1",
+    "remark-react": "^9.0.1",
+    "remark-rehype": "^10.1.0",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
