--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/mapbox__rehype-prism": "^0.8.0",
     "@vercel/analytics": "^0.1.8",
     "date-fns": "^2.29.3",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
     "katex": "^0.16.4",
@@ -39,6 +40,7 @@
     "momentjs": "^2.0.0",
     "next": "^13.1.2",
     "next-mdx-remote": "^4.3.0",
+    "next-remote-watch": "^2.0.0",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.45",
     "parse5": "^7.1.2",
