--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/mapbox__rehype-prism": "^0.8.0",
     "@vercel/analytics": "^0.1.8",
     "date-fns": "^2.29.3",
+    "framer-motion": "^8.5.5",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
