--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rehype-katex": "^6.0.2",
     "rehype-react": "^7.1.2",
     "rehype-stringify": "^9.0.3",
+    "remark-hint": "^1.0.10",
     "remark-math": "^5.1.1",
     "remark-parse": "^10.0.1",
     "remark-react": "^9.0.1",
@@ -73,6 +74,7 @@
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
+    "@types/remark-hint": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "autoprefixer": "^10.4.13",
