--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ['https://creativedesignsguru.com/category/nextjs/', 'https://nextlessjs.com']
+custom: ['https://www.buymeacoffee.com/jonsch318']
