--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,10 @@
         "project": "./tsconfig.json"
       },
       "rules": {
+        "no-plusplus": "off", // Allow using ++ and --
+        "no-continue": "off", // Allow using continue
+        "no-param-reassign": "off", // Allow mutating function parameters
+        "no-await-in-loop": "off", // Allow using await in loop
         "prettier/prettier": [
           "error",
           {
