--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
     "inquirer": "^9.1.4",
+    "js-cookie": "^3.0.1",
     "katex": "^0.16.4",
     "mdx-embed": "^1.1.2",
     "moment": "^2.29.4",
@@ -75,6 +76,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.6",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/remark-hint": "^1.0.1",
