feat: redirect to correct subdomain

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
         "no-param-reassign": "off", // Allow mutating function parameters
         "no-await-in-loop": "off", // Allow using await in loop
         "no-empty": "off", // Allow empty catch block
+        "prefer-template": "warn",
         "prettier/prettier": [
           "error",
           {
