--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "remark-parse": "^10.0.1",
     "remark-react": "^9.0.1",
     "remark-rehype": "^10.1.0",
+    "sharp": "^0.31.3",
     "unified": "^10.1.2",
     "webpack": "^5.75.0"
   },
