--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "moment": "^2.29.4",
     "momentjs": "^2.0.0",
     "next": "^13.1.2",
+    "next-axiom": "^0.16.0",
     "next-mdx-remote": "^4.3.0",
     "next-remote-watch": "^2.0.0",
     "next-seo": "^5.15.0",
