--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mdx-js/mdx": "^2.2.1",
     "@mdx-js/react": "^2.2.1",
     "@next/env": "^13.1.6",
+    "@next/font": "^13.1.6",
     "@next/mdx": "^13.1.6",
     "@remark-embedder/core": "^3.0.1",
     "@remark-embedder/transformer-oembed": "^3.0.0",
@@ -41,6 +42,8 @@
     "js-cookie": "^3.0.1",
     "katex": "^0.16.4",
     "mdx-embed": "^1.1.2",
+    "mdx-mermaid": "2.0.0-rc5",
+    "mermaid": "^9.3.0",
     "moment": "^2.29.4",
     "momentjs": "^2.0.0",
     "next": "^13.1.2",
@@ -59,6 +62,7 @@
     "rehype-react": "^7.1.2",
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
+    "remark-heading-id": "^1.0.0",
     "remark-hint": "^1.0.10",
     "remark-math": "^5.1.1",
     "remark-parse": "^10.0.1",
@@ -66,6 +70,7 @@
     "remark-rehype": "^10.1.0",
     "sharp": "^0.31.3",
     "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.2",
     "webpack": "^5.75.0"
   },
   "devDependencies": {
@@ -114,6 +119,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "rimraf": "^4.1.1",
+    "sass": "^1.58.0",
     "semantic-release": "^19.0.5",
     "start-server-and-test": "^1.15.2",
     "tailwindcss": "^3.2.4",
