--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-katex": "^3.0.1",
+    "react-youtube": "^10.1.0",
     "rehype-katex": "^6.0.2",
     "rehype-react": "^7.1.2",
     "rehype-stringify": "^9.0.3",
