--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,8 @@
     "prismjs",
     "rehype",
     "Rumpe",
+    "rwth",
+    "Schnellzugrifflink",
     "simplifiziert",
     "Subdirs",
     "tuen",
