better instiute navigation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,5 +41,8 @@
     "tuen",
     "wrappt",
     "youtube"
-  ] // Don't run prettier for files listed in .gitignore
+  ],
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  } // Don't run prettier for files listed in .gitignore
 }
