fix: tripple equal and relaxed typechecking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,7 +40,8 @@
     "Subdirs",
     "tuen",
     "wrappt",
-    "youtube"
+    "youtube",
+    "zitat"
   ],
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
