feat: unit tests und allgemeines

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,8 @@
   "cSpell.words": [
     "Adaptee",
     "bissle",
+    "builden",
+    "compilen",
     "htwr",
     "katex",
     "Katex",
@@ -40,6 +42,7 @@
     "simplifiziert",
     "Subdirs",
     "tuen",
+    "Whitebox",
     "wrappt",
     "youtube",
     "zitat"
