--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,5 +49,7 @@
   ],
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  } // Don't run prettier for files listed in .gitignore
+  }, // Don't run prettier for files listed in .gitignore
+  "typescript.tsdk": "node_modules\\.pnpm\\typescript@4.9.5\\node_modules\\typescript\\lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true
 }
