Reduktionen und LOOP Zeugs

--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "react-katex": "^3.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-youtube": "^10.1.0",
+    "rehype-img-size": "^1.0.1",
     "rehype-katex": "^6.0.2",
+    "rehype-prism-plus": "^1.5.1",
     "rehype-react": "^7.1.2",
     "rehype-stringify": "^9.0.3",
     "remark-gfm": "^3.0.1",
