--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,8 @@
     "Katex",
     "naja",
     "oembed",
+    "Polynomialzeitalgorithmen",
+    "polynomiell",
     "prismjs",
     "rehype",
     "Rumpe",
