--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
   "cSpell.enableFiletypes": ["mdx"],
   "cSpell.words": [
     "Adaptee",
+    "Approximationsalgorithmus",
     "bissle",
     "builden",
     "compilen",
@@ -46,6 +47,7 @@
     "simplifiziert",
     "Subdirs",
     "tuen",
+    "Verifizierer",
     "vllt",
     "Whitebox",
     "wrappt",
