--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
-    "@mdx-js/loader": "^2.2.1",
-    "@mdx-js/mdx": "^2.2.1",
-    "@mdx-js/react": "^2.2.1",
-    "@next/env": "^13.1.6",
-    "@next/font": "^13.1.6",
-    "@next/mdx": "^13.1.6",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/env": "^13.2.1",
+    "@next/font": "^13.2.1",
+    "@next/mdx": "^13.2.1",
     "@remark-embedder/core": "^3.0.1",
     "@remark-embedder/transformer-oembed": "^3.0.0",
     "@types/mapbox__rehype-prism": "^0.8.0",
-    "@vercel/analytics": "^0.1.8",
+    "@vercel/analytics": "^0.1.10",
     "date-fns": "^2.29.3",
     "framer-motion": "^8.5.5",
-    "fs": "^0.0.1-security",
+    "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
     "inquirer": "^9.1.4",
@@ -43,16 +43,16 @@
     "katex": "^0.16.4",
     "mdx-embed": "^1.1.2",
     "mdx-mermaid": "2.0.0-rc5",
-    "mermaid": "^9.3.0",
+    "mermaid": "^9.4.0",
     "mini-css-extract-plugin": "^2.7.2",
     "moment": "^2.29.4",
-    "momentjs": "^2.0.0",
-    "next": "^13.1.6",
+    "next": "^13.2.1",
     "next-axiom": "^0.16.0",
     "next-mdx-remote": "^4.3.0",
     "next-remote-watch": "^2.0.0",
     "next-seo": "^5.15.0",
-    "next-sitemap": "^3.1.45",
+    "next-sitemap": "^3.1.52",
+    "nextjs-breadcrumbs": "^1.1.9",
     "parse5": "^7.1.2",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
@@ -79,30 +79,30 @@
     "webpack": "^5.75.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.1.2",
-    "@percy/cli": "^1.17.0",
+    "@next/bundle-analyzer": "^13.2.1",
+    "@percy/cli": "^1.20.0",
     "@percy/cypress": "^3.1.2",
     "@semantic-release/changelog": "^6.0.2",
     "@semantic-release/git": "^10.0.1",
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.6",
-    "@types/js-cookie": "^3.0.2",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
+    "@types/jest": "^29.4.0",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "^18.14.1",
+    "@types/react": "^18.0.28",
     "@types/remark-hint": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.13",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
-    "cssnano": "^5.1.14",
-    "cypress": "^12.3.0",
-    "eslint": "^8.32.0",
+    "cssnano": "^5.1.15",
+    "cypress": "^12.6.0",
+    "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "^13.1.2",
+    "eslint-config-next": "^13.2.1",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.27.5",
@@ -111,24 +111,24 @@
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^9.0.0",
-    "eslint-plugin-tailwindcss": "^3.8.0",
-    "eslint-plugin-testing-library": "^5.9.1",
+    "eslint-plugin-tailwindcss": "^3.9.0",
+    "eslint-plugin-testing-library": "^5.10.2",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "lint-staged": "^13.1.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "lint-staged": "^13.1.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "rimraf": "^4.1.1",
-    "sass": "^1.58.0",
+    "prettier": "^2.8.4",
+    "rimraf": "^4.1.2",
+    "sass": "^1.58.3",
     "semantic-release": "^19.0.5",
-    "start-server-and-test": "^1.15.2",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "start-server-and-test": "^1.15.4",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5"
   },
   "release": {
     "branches": [
