--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^18.2.0",
     "react-katex": "^3.0.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-tooltip": "^5.10.0",
     "react-youtube": "^10.1.0",
     "rehype-img-size": "^1.0.1",
     "rehype-katex": "^6.0.2",
@@ -73,6 +74,7 @@
     "sharp": "^0.31.3",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2",
+    "uuid": "^9.0.0",
     "webpack": "^5.75.0"
   },
   "devDependencies": {
@@ -89,6 +91,7 @@
     "@types/node": "^18.14.1",
     "@types/react": "^18.0.28",
     "@types/remark-hint": "^1.0.1",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "autoprefixer": "^10.4.13",
