--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "@percy/cli": "^1.21.0",
     "@percy/cypress": "^3.1.2",
     "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -92,10 +91,9 @@
     "@types/node": "^18.15.10",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.29",
+    "@types/react-katex": "^3.0.0",
     "@types/remark-hint": "^1.0.1",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
@@ -107,7 +105,6 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "^13.2.4",
-    "eslint-config-prettier": "^8.8.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.27.5",
@@ -127,9 +124,6 @@
     "lint-staged": "^13.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
-    "rimraf": "^4.4.1",
-    "sass": "^1.60.0",
     "prettier": "^2.8.7",
     "rimraf": "^4.4.1",
     "sass": "^1.60.0",
