--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-js-boilerplate",
-  "version": "3.6.0",
+  "name": "htwr-aachen",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
