fix: updated github username

--- a/package.json
+++ b/package.json
@@ -152,5 +152,5 @@
       "@semantic-release/github"
     ]
   },
-  "author": "Ixartz (https://github.com/ixartz)"
+  "author": "Jonas Schneider (https://github.com/jonsch318)"
 }
