--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.7.0",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/mdx": "^2.3.0",
@@ -47,7 +48,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "moment": "^2.29.4",
     "natsort": "^2.0.3",
-    "next": "^14.0.3",
+    "next": "^14.0.4",
     "next-axiom": "^0.16.0",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^5.15.0",
@@ -81,19 +82,19 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.5.6",
-    "@percy/cli": "^1.27.4",
+    "@percy/cli": "^1.27.5",
     "@percy/cypress": "^3.1.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.5.10",
+    "@types/jest": "^29.5.11",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^18.19.1",
+    "@types/node": "^18.19.3",
     "@types/prismjs": "^1.26.3",
-    "@types/react": "^18.2.40",
-    "@types/react-katex": "^3.0.3",
+    "@types/react": "^18.2.43",
+    "@types/react-katex": "^3.0.4",
     "@types/remark-hint": "^1.0.6",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -106,7 +107,7 @@
     "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "^14.0.3",
+    "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-import": "^2.29.0",
@@ -125,13 +126,13 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.3.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.31",
+    "postcss": "^8.4.32",
     "prettier": "^2.8.8",
     "rimraf": "^4.4.1",
     "sass": "^1.69.5",
     "semantic-release": "^19.0.5",
     "start-server-and-test": "^1.15.4",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.3.6",
     "typescript": "^4.9.5"
   },
   "release": {
