--- a/.eslintrc
+++ b/.eslintrc
@@ -45,6 +45,7 @@
         "project": "./tsconfig.json"
       },
       "rules": {
+        "no-use-before-define": "off",
         "no-underscore-dangle": "off",
         "no-plusplus": "off", // Allow using ++ and --
         "no-continue": "off", // Allow using continue
