--- a/package.json
+++ b/package.json
@@ -32,21 +32,22 @@
     "@remark-embedder/core": "^3.0.2",
     "@remark-embedder/transformer-oembed": "^3.0.0",
     "@types/mapbox__rehype-prism": "^0.8.3",
-    "@types/mdx": "^2.0.10",
+    "@types/mdx": "^2.0.11",
     "@uiw/react-prismjs": "^1.3.6",
     "@vercel/analytics": "^0.1.11",
+    "@vercel/speed-insights": "^1.0.9",
     "date-fns": "^2.30.0",
     "framer-motion": "^8.5.5",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
-    "inquirer": "^9.2.12",
+    "inquirer": "^9.2.13",
     "js-cookie": "^3.0.5",
     "katex": "^0.16.9",
     "mdx-embed": "^1.1.2",
     "mdx-mermaid": "^2.0.0",
-    "mermaid": "^10.7.0",
-    "mini-css-extract-plugin": "^2.7.7",
+    "mermaid": "^10.8.0",
+    "mini-css-extract-plugin": "^2.8.0",
     "moment": "^2.30.1",
     "natsort": "^2.0.3",
     "next": "^14.1.0",
@@ -79,7 +80,7 @@
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2",
     "uuid": "^9.0.1",
-    "webpack": "^5.89.0"
+    "webpack": "^5.90.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.5.6",
@@ -90,14 +91,14 @@
     "@testing-library/cypress": "^9.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^18.19.8",
+    "@types/node": "^18.19.14",
     "@types/prismjs": "^1.26.3",
-    "@types/react": "^18.2.48",
+    "@types/react": "^18.2.52",
     "@types/react-katex": "^3.0.4",
     "@types/remark-hint": "^1.0.6",
-    "@types/uuid": "^9.0.7",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.17",
@@ -120,7 +121,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^9.0.0",
-    "eslint-plugin-tailwindcss": "^3.14.0",
+    "eslint-plugin-tailwindcss": "^3.14.1",
     "eslint-plugin-testing-library": "^5.11.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.7.0",
@@ -134,7 +135,7 @@
     "semantic-release": "^19.0.5",
     "start-server-and-test": "^1.15.4",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.3.3"
   },
   "release": {
     "branches": [
