--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ typings/
 .env
 .env.test
 .env.local
-
+.env.*.local
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
@@ -103,3 +103,4 @@ dist
 
 # TernJS port file
 .tern-port
+.vercel
