--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "@google-cloud/storage": "^7.8.0",
     "@mapbox/rehype-prism": "^0.8.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
+    "@next/bundle-analyzer": "^14.1.3",
     "@next/env": "^13.5.6",
     "@next/mdx": "^13.5.6",
     "@remark-embedder/core": "^3.0.2",
@@ -46,10 +46,8 @@
     "mdx-mermaid": "^2.0.0",
     "mermaid": "^10.9.0",
     "mini-css-extract-plugin": "^2.8.1",
-    "moment": "^2.30.1",
     "natsort": "^2.0.3",
     "next": "^14.1.3",
-    "next-axiom": "^0.16.0",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.55",
@@ -81,7 +79,6 @@
     "webpack": "^5.90.3"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.5.6",
     "@percy/cli": "^1.28.1",
     "@percy/cypress": "^3.1.2",
     "@semantic-release/changelog": "^6.0.3",
@@ -137,7 +134,7 @@
   },
   "release": {
     "branches": [
-      "main"
+      "master"
     ],
     "plugins": [
       "@semantic-release/commit-analyzer",
