--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,14 +1,9 @@
-name: Docker Build
+name: release
 
 on:
   push:
-    branches:
-      - "master"
     tags:
       - "v*.*.*"
-  pull_request:
-    branches:
-      - "master"
 
 jobs:
   changelog:
@@ -30,6 +25,7 @@ jobs:
         env:
           OUTPUT: CHANGELOG.md
       - name: Uploade release changes
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
           body: ${{ steps.git-cliff.outputs.content }}
@@ -44,7 +40,7 @@ jobs:
           git commit -m "Update changelog"
           git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git master
 
-  build:
+  build-push:
     needs: changelog
     runs-on: ubuntu-latest
     steps:
