--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "@next/mdx": "^13.5.6",
     "@remark-embedder/core": "^3.0.2",
     "@remark-embedder/transformer-oembed": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/mapbox__rehype-prism": "^0.8.3",
     "@types/mdx": "^2.0.11",
     "@uiw/react-prismjs": "^1.3.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^8.5.5",
     "fs": "0.0.1-security",
@@ -74,6 +77,8 @@
     "remark-react": "^9.0.1",
     "remark-rehype": "^10.1.0",
     "sharp": "^0.31.3",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2",
     "uuid": "^9.0.1",
