--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@next/bundle-analyzer": "^14.1.3",
     "@next/env": "^13.5.6",
     "@next/mdx": "^13.5.6",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@remark-embedder/core": "^3.0.2",
     "@remark-embedder/transformer-oembed": "^3.0.0",
     "@tailwindcss/typography": "^0.5.10",
