feat: light-dark themes / dark default for new pages

--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.55",
+    "next-themes": "^0.3.0",
     "nextjs-breadcrumbs": "^1.1.9",
     "parse5": "^7.1.2",
     "prismjs": "^1.29.0",
@@ -97,7 +98,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^18.19.22",
     "@types/prismjs": "^1.26.3",
-    "@types/react": "^18.2.64",
+    "@types/react": "^18.2.66",
     "@types/react-katex": "^3.0.4",
     "@types/remark-hint": "^1.0.6",
     "@types/uuid": "^9.0.8",
