--- a/.eslintrc
+++ b/.eslintrc
@@ -45,7 +45,14 @@
         "project": "./tsconfig.json"
       },
       "rules": {
-        "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+        "no-unused-vars": [
+          "warn",
+          {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "destructuredArrayIgnorePattern": "^_"
+          }
+        ],
         "no-cond-assign": "off",
         "no-nested-ternary": "off",
         "no-multi-assign": "off",
@@ -75,13 +82,35 @@
         "import/prefer-default-export": "off", // Named export is easier to refactor automatically
         "simple-import-sort/imports": "warn", // Import configuration for `eslint-plugin-simple-import-sort`
         "simple-import-sort/exports": "warn", // Export configuration for `eslint-plugin-simple-import-sort`
-        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+          "error",
+          {
+            "args": "all",
+            "argsIgnorePattern": "^_",
+            "caughtErrors": "all",
+            "caughtErrorsIgnorePattern": "^_",
+            "destructuredArrayIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "ignoreRestSiblings": true
+          }
+        ],
         "unused-imports/no-unused-imports": "error",
         "unused-imports/no-unused-vars": [
           "error",
-          { "argsIgnorePattern": "^_" }
+          {
+            "argsIgnorePattern": "^_",
+            "varsIgnorePattern": "^_",
+            "destructuredArrayIgnorePattern": "^_"
+          }
         ],
-        "tailwindcss/no-custom-classname": "off" // Allow custom classnames
+        "tailwindcss/no-custom-classname": "off", // Allow custom classnames,
+        "@typescript-eslint/naming-convention": [
+          "error",
+          {
+            "leadingUnderscore": "allow",
+            "trailingUnderscore": "allow"
+          }
+        ]
       }
     },
     // Configuration for testing
