--- a/package.json
+++ b/package.json
@@ -29,23 +29,25 @@
     "@next/bundle-analyzer": "^14.1.4",
     "@next/env": "^13.5.6",
     "@next/mdx": "^13.5.6",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@remark-embedder/core": "^3.0.2",
     "@remark-embedder/transformer-oembed": "^3.0.0",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.12",
     "@types/mapbox__rehype-prism": "^0.8.3",
-    "@types/mdx": "^2.0.11",
+    "@types/mdx": "^2.0.12",
     "@uiw/react-prismjs": "^1.3.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "date-fns": "^2.30.0",
     "framer-motion": "^8.5.5",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
-    "inquirer": "^9.2.16",
+    "inquirer": "^9.2.17",
     "js-cookie": "^3.0.5",
-    "katex": "^0.16.9",
+    "katex": "^0.16.10",
     "lucide-react": "^0.358.0",
     "mdx-embed": "^1.1.2",
     "mdx-mermaid": "^2.0.0",
@@ -96,9 +98,9 @@
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^18.19.26",
+    "@types/node": "^18.19.30",
     "@types/prismjs": "^1.26.3",
-    "@types/react": "^18.2.67",
+    "@types/react": "^18.2.74",
     "@types/react-katex": "^3.0.4",
     "@types/remark-hint": "^1.0.6",
     "@types/uuid": "^9.0.8",
@@ -134,11 +136,11 @@
     "postcss": "^8.4.38",
     "prettier": "^2.8.8",
     "rimraf": "^4.4.1",
-    "sass": "^1.72.0",
+    "sass": "^1.74.1",
     "semantic-release": "^19.0.5",
     "start-server-and-test": "^1.15.4",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.3"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.4"
   },
   "release": {
     "branches": [
