--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,51 +2,11 @@ name: release
 
 on:
   push:
-    tags:
-      - "v*.*.*"
+    branches:
+      - master
 
 jobs:
-  changelog:
-    permissions:
-      contents: write
-    name: Changelog generation
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout: CHANGELOG.md
-          fetch-depth: 0
-      # - name: Git Cliff CHANGELOG generation
-      #   uses: orhun/git-cliff-action@v3
-      #   with:
-      #     config: cliff.toml
-      #     args: -o CHANGELOG.md
-      - name: Git Cliff generation
-        uses: orhun/git-cliff-action@v3
-        id: git-cliff
-        with:
-          config: cliff.toml
-          args: -vv --latest --strip header
-        env:
-          OUTPUT: CHANGELOG.md
-      - name: Uploade release changes
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v2
-        with:
-          body: ${{ steps.git-cliff.outputs.content }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      # - name: Commit
-      #   run: |
-      #     git config user.name 'github-actions[bot]'
-      #     git config user.email 'github-actions[bot]@users.noreply.github.com'
-      #     set +e
-      #     git add CHANGELOG.md
-      #     git commit -m "Update changelog"
-      #     git push
   build-push:
-    needs: changelog
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -60,9 +20,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=ref,event=tag
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
+            type=raw,value=latest,enabled=true
             type=sha
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -80,3 +38,8 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels}}
           file: "docker/production/Dockerfile"
+      - name: Deployment Hook
+        uses: distributhor/workflow-webhook@v3
+        with:
+          webhook_url: ${{secrets.WEBHOOK_URL}}
+          webhook_secret: ${{secrets.WEBHOOK_SECRET}}
