a bunch of stuff

--- a/.eslintrc
+++ b/.eslintrc
@@ -54,6 +54,7 @@
 				"project": "./tsconfig.json"
 			},
 			"rules": {
+				"no-restricted-syntax": "off",
 				"no-unused-vars": [
 					"warn",
 					{
