--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,20 +2,10 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "target": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ],
-    "types": [
-      "node",
-      "cypress",
-      "@percy/cypress",
-      "@testing-library/cypress"
-    ],
+    "lib": ["ES2022", "dom"],
+    "types": ["node", "cypress", "@percy/cypress", "@testing-library/cypress"],
     "isolatedModules": false
   },
-  "include": [
-    "**/*.ts"
-  ],
+  "include": ["**/*.ts"],
   "exclude": []
 }
