--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "htwr-aachen",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "build-stats": "cross-env ANALYZE=true npm run build",
@@ -28,7 +28,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/bundle-analyzer": "^14.2.14",
+    "@next/bundle-analyzer": "^14.2.15",
     "@next/env": "^13.5.7",
     "@next/mdx": "^13.5.7",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -37,7 +37,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@remark-embedder/core": "^3.0.3",
     "@remark-embedder/transformer-oembed": "^3.0.0",
-    "@shikijs/rehype": "^1.21.0",
+    "@shikijs/rehype": "^1.22.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/mapbox__rehype-prism": "^0.8.3",
     "@types/mdx": "^2.0.13",
@@ -55,17 +55,15 @@
     "js-cookie": "^3.0.5",
     "katex": "^0.16.11",
     "lucide-react": "^0.358.0",
-    "mdx-embed": "^1.1.2",
     "mermaid": "^10.9.2",
     "mini-css-extract-plugin": "^2.9.1",
     "natsort": "^2.0.3",
-    "next": "^14.2.14",
+    "next": "^14.2.15",
     "next-mdx-remote": "^4.4.1",
     "next-seo": "^5.15.0",
     "next-sitemap": "^3.1.55",
     "next-themes": "^0.3.0",
-    "nextjs-breadcrumbs": "^1.1.9",
-    "parse5": "^7.1.2",
+    "parse5": "^7.2.0",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -86,8 +84,8 @@
     "remark-react": "^9.0.1",
     "remark-rehype": "^10.1.0",
     "sharp": "^0.31.3",
-    "shiki": "^1.21.0",
-    "tailwind-merge": "^2.5.2",
+    "shiki": "^1.22.0",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^10.1.2",
     "unist-util-visit": "^4.1.2",
@@ -96,7 +94,7 @@
     "webpack": "^5.95.0"
   },
   "devDependencies": {
-    "@percy/cli": "^1.29.4",
+    "@percy/cli": "^1.30.1",
     "@percy/cypress": "^3.1.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
@@ -105,7 +103,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.13",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^18.19.54",
+    "@types/node": "^18.19.56",
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.11",
     "@types/react-katex": "^3.0.4",
@@ -121,7 +119,7 @@
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-next": "^14.2.14",
+    "eslint-config-next": "^14.2.15",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-cypress": "^2.15.2",
     "eslint-plugin-import": "^2.31.0",
@@ -133,22 +131,22 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^9.0.0",
-    "eslint-plugin-tailwindcss": "^3.17.4",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "eslint-plugin-testing-library": "^5.11.1",
     "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.3.0",
-    "memfs": "^4.12.0",
+    "memfs": "^4.14.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "prettier": "^2.8.8",
     "rimraf": "^4.4.1",
-    "sass": "^1.79.4",
+    "sass": "^1.80.1",
     "semantic-release": "^19.0.5",
     "start-server-and-test": "^1.15.4",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.2"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3"
   },
   "release": {
     "branches": [
