--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "cmdk": "^1.0.0",
     "date-fns": "^2.30.0",
     "feed": "^4.2.2",
-    "framer-motion": "^8.5.5",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
@@ -57,6 +56,7 @@
     "lucide-react": "^0.358.0",
     "mermaid": "^10.9.2",
     "mini-css-extract-plugin": "^2.9.1",
+    "motion": "^12.4.4",
     "natsort": "^2.0.3",
     "next": "^14.2.15",
     "next-mdx-remote": "^4.4.1",
