--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@radix-ui/react-dialog": "^1.1.6",
 		"@radix-ui/react-navigation-menu": "^1.2.5",
 		"@radix-ui/react-slot": "^1.1.2",
+		"@radix-ui/react-visually-hidden": "^1.1.2",
 		"@remark-embedder/core": "^3.0.3",
 		"@remark-embedder/transformer-oembed": "^3.0.0",
 		"@shikijs/rehype": "^1.29.2",
@@ -71,6 +72,7 @@
 		"@eslint/js": "^9.21.0",
 		"@semantic-release/changelog": "^6.0.3",
 		"@semantic-release/git": "^10.0.1",
+		"@tailwindcss/postcss": "^4.0.8",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
@@ -80,7 +82,6 @@
 		"@types/react": "19.0.10",
 		"@types/remark-hint": "^1.0.6",
 		"@types/uuid": "^9.0.8",
-		"autoprefixer": "^10.4.20",
 		"cross-env": "^7.0.3",
 		"cssnano": "^5.1.15",
 		"eslint": "^9.21.0",
@@ -99,7 +100,7 @@
 		"postcss": "^8.5.3",
 		"rimraf": "^4.4.1",
 		"sass": "^1.85.0",
-		"tailwindcss": "^3.4.17",
+		"tailwindcss": "^4.0.8",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.25.0"
 	},
