--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "esnext"
     ],
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "removeComments": true,
     "preserveConstEnums": true,
