--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
 		"@radix-ui/react-navigation-menu": "^1.2.5",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@radix-ui/react-visually-hidden": "^1.1.2",
-		"@remark-embedder/core": "^3.0.3",
-		"@remark-embedder/transformer-oembed": "^5.0.1",
 		"@shikijs/rehype": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/mdx": "^2.0.13",
@@ -35,9 +33,7 @@
 		"cmdk": "^1.0.4",
 		"date-fns": "^4.1.0",
 		"feed": "^4.2.2",
-		"fs": "0.0.1-security",
 		"gray-matter": "^4.0.3",
-		"inquirer": "^12.4.2",
 		"katex": "^0.16.21",
 		"lucide-react": "^0.475.0",
 		"mermaid": "^11.4.1",
@@ -53,12 +49,9 @@
 		"react-responsive-carousel": "^3.2.23",
 		"rehype-katex": "^7.0.1",
 		"rehype-react": "^8.0.0",
-		"rehype-stringify": "^10.0.1",
 		"remark-gfm": "^4.0.1",
 		"remark-hint": "^1.0.10",
 		"remark-math": "^6.0.0",
-		"remark-parse": "^11.0.0",
-		"remark-react": "^10.0.0",
 		"remark-rehype": "^11.1.1",
 		"sharp": "^0.33.5",
 		"shiki": "^3.0.0",
@@ -70,36 +63,30 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.21.0",
-		"@semantic-release/changelog": "^6.0.3",
-		"@semantic-release/git": "^10.0.1",
 		"@tailwindcss/postcss": "^4.0.8",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@types/jest": "^29.5.14",
-		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^22.13.5",
 		"@types/react": "19.0.10",
 		"@types/remark-hint": "^1.0.6",
 		"@types/uuid": "^10.0.0",
 		"cross-env": "^7.0.3",
-		"cssnano": "^7.0.6",
 		"eslint": "^9.21.0",
-		"eslint-config-next": "15.1.7",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
-		"eslint-plugin-next": "^0.0.0",
 		"eslint-plugin-react": "^7.37.4",
 		"eslint-plugin-react-compiler": "19.0.0-beta-e1e972c-20250221",
 		"eslint-plugin-react-hooks": "^5.1.0",
 		"globals": "^16.0.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
-		"lint-staged": "^15.4.3",
 		"memfs": "^4.17.0",
 		"postcss": "^8.5.3",
+		"prettier": "3.5.2",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"rimraf": "^6.0.1",
-		"sass": "^1.85.0",
 		"tailwindcss": "^4.0.8",
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.25.0"
