fix: wrangler config & blog typo & up deps

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,7 @@
+name = "htwr-aachen"
+pages_build_output_dir = "./out"
+compatibility_date = "2025-04-01"
+
 [[r2_buckets]]
 binding = "CONTENT_ASSETS"
 bucket_name = "content-assets"
