--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "1.0.0",
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build && next-image-export-optimizer",
+		"build": "next build",
 		"start": "next start",
 		"build-stats": "cross-env ANALYZE=true npm run build",
 		"lint": "next lint",
@@ -44,7 +44,6 @@
 		"motion": "^12.6.3",
 		"natsort": "^2.0.3",
 		"next": "15.2.4",
-		"next-image-export-optimizer": "^1.18.0",
 		"next-mdx-remote": "^5.0.0",
 		"next-seo": "^6.6.0",
 		"next-themes": "^0.4.6",
