move to turbopack

--- a/package.json
+++ b/package.json
@@ -1,114 +1,115 @@
 {
-  "type": "module",
-  "name": "htwr-aachen",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build && next-image-export-optimizer",
-    "start": "next start",
-    "build-stats": "cross-env ANALYZE=true npm run build",
-    "lint": "next lint",
-    "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
-    "check-types": "tsc --noEmit --pretty",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
-    "@icons-pack/react-simple-icons": "^13.7.0",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/mdx": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@microflash/rehype-figure": "^2.1.4",
-    "@next/bundle-analyzer": "15.4.6",
-    "@next/env": "15.4.6",
-    "@next/mdx": "15.4.6",
-    "@radix-ui/react-accordion": "^1.2.12",
-    "@radix-ui/react-collapsible": "^1.1.12",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.14",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@radix-ui/react-visually-hidden": "^1.2.3",
-    "@react-three/fiber": "^9.3.0",
-    "@shikijs/rehype": "^3.9.2",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/mdx": "^2.0.13",
-    "@types/three": "^0.179.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-auto-height": "^8.6.0",
-    "embla-carousel-autoplay": "^8.6.0",
-    "embla-carousel-react": "^8.6.0",
-    "feed": "^5.1.0",
-    "gray-matter": "^4.0.3",
-    "katex": "^0.16.22",
-    "lucide-react": "^0.539.0",
-    "mermaid": "^11.9.0",
-    "motion": "^12.23.12",
-    "natsort": "^2.0.3",
-    "next": "15.4.6",
-    "next-image-export-optimizer": "^1.19.0",
-    "next-mdx-remote": "^5.0.0",
-    "next-seo": "^6.8.0",
-    "next-themes": "^0.4.6",
-    "prop-types": "^15.8.1",
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "react-hook-form": "^7.62.0",
-    "rehype-katex": "^7.0.1",
-    "rehype-react": "^8.0.0",
-    "remark-gfm": "^4.0.1",
-    "remark-hint": "^1.0.10",
-    "remark-math": "^6.0.0",
-    "remark-rehype": "^11.1.2",
-    "sharp": "^0.34.3",
-    "shiki": "^3.9.2",
-    "simple-icons": "^15.11.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.179.1",
-    "uuid": "^11.1.0",
-    "vaul": "^1.1.2",
-    "webpack": "^5.101.3",
-    "zod": "^4.0.17"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@mdx-js/language-service": "^0.7.2",
-    "@next/eslint-plugin-next": "^15.4.6",
-    "@tailwindcss/postcss": "^4.1.12",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.7.0",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.0",
-    "@types/react": "19.1.10",
-    "@types/remark-hint": "^1.0.6",
-    "@types/uuid": "^10.0.0",
-    "cross-env": "^10.0.0",
-    "eslint": "^9.33.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-compiler": "19.1.0-rc.2",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "globals": "^16.3.0",
-    "jest": "^30.0.5",
-    "jest-environment-jsdom": "^30.0.5",
-    "memfs": "^4.36.3",
-    "postcss": "^8.5.6",
-    "prettier": "3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "rimraf": "^6.0.1",
-    "tailwindcss": "^4.1.12",
-    "tw-animate-css": "^1.3.7",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.1"
-  },
-  "author": "Jonas Schneider (https://github.com/jonsch318)",
-  "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
+	"type": "module",
+	"name": "htwr-aachen",
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build && next-image-export-optimizer",
+		"start": "next start",
+		"build-stats": "cross-env ANALYZE=true npm run build",
+		"lint": "eslint",
+		"lint:fix": "eslint --fix",
+		"format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
+		"check-types": "tsc --noEmit --pretty",
+		"test": "jest"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^5.2.1",
+		"@icons-pack/react-simple-icons": "^13.7.0",
+		"@mdx-js/loader": "^3.1.0",
+		"@mdx-js/mdx": "^3.1.0",
+		"@mdx-js/react": "^3.1.0",
+		"@microflash/rehype-figure": "^2.1.4",
+		"@next/bundle-analyzer": "15.5.0",
+		"@next/env": "15.5.0",
+		"@next/mdx": "15.5.0",
+		"@radix-ui/react-accordion": "^1.2.12",
+		"@radix-ui/react-collapsible": "^1.1.12",
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-navigation-menu": "^1.2.14",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tooltip": "^1.2.8",
+		"@radix-ui/react-visually-hidden": "^1.2.3",
+		"@react-three/fiber": "^9.3.0",
+		"@shikijs/rehype": "^3.11.0",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/mdx": "^2.0.13",
+		"@types/three": "^0.179.0",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
+		"date-fns": "^4.1.0",
+		"embla-carousel-auto-height": "^8.6.0",
+		"embla-carousel-autoplay": "^8.6.0",
+		"embla-carousel-react": "^8.6.0",
+		"feed": "^5.1.0",
+		"gray-matter": "^4.0.3",
+		"katex": "^0.16.22",
+		"lucide-react": "^0.540.0",
+		"mermaid": "^11.10.0",
+		"motion": "^12.23.12",
+		"natsort": "^2.0.3",
+		"next": "15.5.0",
+		"next-image-export-optimizer": "^1.19.0",
+		"next-mdx-remote": "^5.0.0",
+		"next-seo": "^6.8.0",
+		"next-themes": "^0.4.6",
+		"prop-types": "^15.8.1",
+		"react": "19.1.1",
+		"react-dom": "19.1.1",
+		"react-hook-form": "^7.62.0",
+		"rehype-katex": "^7.0.1",
+		"rehype-react": "^8.0.0",
+		"remark-gfm": "^4.0.1",
+		"remark-hint": "^1.0.10",
+		"remark-math": "^6.0.0",
+		"remark-rehype": "^11.1.2",
+		"sharp": "^0.34.3",
+		"shiki": "^3.11.0",
+		"simple-icons": "^15.11.0",
+		"sonner": "^2.0.7",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss-animate": "^1.0.7",
+		"three": "^0.179.1",
+		"uuid": "^11.1.0",
+		"vaul": "^1.1.2",
+		"webpack": "^5.101.3",
+		"zod": "^4.0.17"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.33.0",
+		"@mdx-js/language-service": "^0.7.2",
+		"@next/eslint-plugin-next": "^15.5.0",
+		"@tailwindcss/postcss": "^4.1.12",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.7.0",
+		"@testing-library/react": "^16.3.0",
+		"@types/jest": "^30.0.0",
+		"@types/node": "^24.3.0",
+		"@types/react": "19.1.10",
+		"@types/remark-hint": "^1.0.6",
+		"@types/uuid": "^10.0.0",
+		"cross-env": "^10.0.0",
+		"eslint": "^9.33.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-jsx-a11y": "^6.10.2",
+		"eslint-plugin-react": "^7.37.5",
+		"eslint-plugin-react-compiler": "19.1.0-rc.2",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"globals": "^16.3.0",
+		"jest": "^30.0.5",
+		"jest-environment-jsdom": "^30.0.5",
+		"memfs": "^4.36.3",
+		"postcss": "^8.5.6",
+		"prettier": "3.6.2",
+		"prettier-plugin-tailwindcss": "^0.6.14",
+		"rimraf": "^6.0.1",
+		"tailwindcss": "^4.1.12",
+		"tw-animate-css": "^1.3.7",
+		"typescript": "^5.9.2",
+		"typescript-eslint": "^8.40.0"
+	},
+	"author": "Jonas Schneider (https://github.com/jonsch318)",
+	"packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
 }
