--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-navigation-menu": "^1.2.14",
+		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@radix-ui/react-visually-hidden": "^1.2.3",
@@ -37,6 +39,7 @@
 		"@types/mdx": "^2.0.13",
 		"@types/three": "^0.181.0",
 		"@types/unist": "^3.0.3",
+		"babel-plugin-react-compiler": "^1.0.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
@@ -72,7 +75,7 @@
 		"remark-rehype": "^11.1.2",
 		"sharp": "^0.34.4",
 		"shiki": "^3.14.0",
-		"simple-icons": "^15.18.0",
+		"simple-icons": "^15.19.0",
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss-animate": "^1.0.7",
